dawincie and linkedIn fields added to personnelModel. linkedIn field is not yet in use anywhere in the app. dawinci added as new field in Manage personnel. Added both to overview and create personnel. Also added to PersonnelInfoSidesheet. Discipline no longer mandatory in PersonnelSideInfoSideSheet for form validation. Adjusted AdStatusIcon to get rid of some error in console. Styles has been adjusted to accomodate new field in managepersonnel. Added border-box to PersonnelInfoSideSheet as the padding made it go outside the border, greating a scrollbar at the bottom.

--- a/src/frontend/src/pages/ProjectPage/pages/ContractPage/pages/ManagePersonnelPage/AddPersonnelSideSheet/styles.less
+++ b/src/frontend/src/pages/ProjectPage/pages/ContractPage/pages/ManagePersonnelPage/AddPersonnelSideSheet/styles.less
@@ -17,7 +17,7 @@
         .tableRow {
             width: 100%;
             display:grid;
-            grid-template-columns: 48px 48px repeat(5,1fr);
+            grid-template-columns: 48px 48px repeat(6,1fr);
           
 
             .headerRowCell {
