--- a/src/frontend/src/pages/ProjectPage/pages/ContractPage/pages/ManagePersonnelPage/PersonnelInfoSideSheet/styles.less
+++ b/src/frontend/src/pages/ProjectPage/pages/ContractPage/pages/ManagePersonnelPage/PersonnelInfoSideSheet/styles.less
@@ -1,5 +1,6 @@
 .tabContainer {
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
     padding: calc(var(--grid-unit) * 3px);
 }
